hide label input  on Contact's related list (Opportunity)

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -35,7 +35,7 @@
               <div class="modal-body">
                  <form id="addLead" name="addaccount" ng-keyup="addLeadOnKey(lead)" class="form-horizontal"> 
                     <div class="form-group">
-                        <label  class="required col-md-3 control-label">{{_("First Name")}} *</label>
+                        <label  class="required col-md-3 control-label">{{_("First Name")}} </label>
                        
                        <div class="col-md-9">
                           <input type="text" class="form-control" required id="id_name" ng-model="lead.firstname">
