--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -532,13 +532,13 @@
                           <input type="text" class="form-control" required id="id_name" ng-model="opportunity.name">
                           </div>
                       </div>
-                      <div class="form-group">
+                      <!--div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
                        
                         <div class="col-md-9">
                           <input type="text" class="form-control"  id="id_label" ng-model="opportunity.description">
                         </div>
-                      </div>
+                      </div-->
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Amount")}} </label>
                         <div class="col-md-9">
