--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -30,16 +30,16 @@
                     <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                      <h3 id="myModalLabel" class="modal-title">Close Task</h3>
+                      <h3 id="myModalLabel" class="modal-title">Delete Task</h3>
                     </div>
                     <div class="modal-body">
                        <form id="seletesho" name="deletesho" class="form-horizontal"> 
-                        <p>{{_("Are you sure you want to close this task")}} .</p>
+                        <p>{{_("Are you sure you want to delete selected tasks")}} .</p>
                     </div>
                       <div class="modal-footer">
                         <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                         
-                        <input ng-hide="isLoading" ng-click="closeTask()" type="submit" class="btn red" value="Close this Task">
+                        <input ng-hide="isLoading" ng-click="closeTask()" type="submit" class="btn red" value="Delete this Account">
                         <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
                       </div>
                   </form>
@@ -102,7 +102,7 @@
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                <input ng-hide="isLoading" ng-click="addNewContributors()" type="submit" class="btn green" value="{{ _('Add this user') }}">
+                <input ng-hide="isLoading" ng-click="addNewContributors()" type="submit" class="btn green" value="{{ _('Add this account') }}">
                 <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...') }}" disabled>
               </div>
                </form>
@@ -214,9 +214,11 @@
                       </div>
                     </div>
                 </form>
-                <div class="newTask-meta">
+                <div>
+                  <div class="newTask-meta pull-right">
                     <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' ng-model='newTask.reminder' class="new-task-reminder pull-right"></datetimepick>
                      <datetimepick ng-model='newTask.due' class="new-task-date pull-right" label-format='MMM d, h:mm a'></datetimepick>
+                  </div>  
                 </div>
               </div>
             </div>
@@ -337,7 +339,7 @@
                                         <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
                                         <i class="fa fa-tags"></i>
                                          <span class="btn-text">
-                                            Tags
+                                            Tags iooo
                                          </span>
                                         </button>
                                         <button ng-click="assigneeModal()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
@@ -359,7 +361,7 @@
                                        <h4 ng-dblclick="edit_task(task)" ng-show="edited_task!=task" class="col-md-6 col-xs-10 list-group-item-heading"
                                        ng-class= "{task_closed: task.status=='closed'}">
                                        <i class="fa fa-dot-circle-o status_color" style="color:<%= task.status_color%>;" data-toggle="tooltip" data-placement="top" title="<%= task.status_label %>"></i>
-                                         <a href="/#/tasks/show/<%= task.id %>"> <%= task.title %></a>
+                                        <%= task.title %>
                                        </h4>
                                        <div ng-show="edited_task==task" class="col-md-6 col-xs-7">
                                        <form ng-submit="done_edit_task(task)">
@@ -372,7 +374,7 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a > @<%= assignee.display_name %></a>
+                                               <a href="#"> @<%= assignee.display_name %></a>
                                             </span>
                                         </div>
                                     </div>
@@ -437,7 +439,7 @@
                                        <h4 ng-dblclick="edit_task(task)" ng-show="edited_task!=task" class="col-md-6 col-xs-10 list-group-item-heading"
                                        ng-class= "{task_closed: task.status=='closed'}">
                                        <i class="fa fa-dot-circle-o status_color" style="color:<%= task.status_color%>;" data-toggle="tooltip" data-placement="top" title="<%= task.status_label %>"></i>
-                                         <a href="/#/tasks/show/<%= task.id %>"> <%= task.title %></a>
+                                        <%= task.title %>
                                        </h4>
                                        <div ng-show="edited_task==task" class="col-md-6 col-xs-7">
                                        <form ng-submit="done_edit_task(task)">
@@ -515,7 +517,7 @@
                                        <h4 ng-dblclick="edit_task(task)" ng-show="edited_task!=task" class="col-md-6 col-xs-10 list-group-item-heading"
                                        ng-class= "{task_closed: task.status=='closed'}">
                                        <i class="fa fa-dot-circle-o status_color" style="color:<%= task.status_color%>;" data-toggle="tooltip" data-placement="top" title="<%= task.status_label %>"></i>
-                                         <a href="/#/tasks/show/<%= task.id %>"> <%= task.title %></a>
+                                        <%= task.title %>
                                        </h4>
                                        <div ng-show="edited_task==task" class="col-md-6 col-xs-7">
                                        <form ng-submit="done_edit_task(task)">
@@ -652,7 +654,7 @@
                 <ul class="list-group tags-list">
                   <li  ng-repeat="tag_item in tags" class="list-group-item tags-list-item" ng-click="selectTag(tag_item,$index,$event)"  >
                   <div class="row">
-                    <span  draggable ng-drag="dragTag(tag_item)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;" class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"><%= tag_item.name %> </span>
+                    <span  draggable ng-drag="dragTag(tag_item)" style="background-color:<%=tag_item.color%>;color:idealTextColor(<%=tag_item.color%>);" class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"><%= tag_item.name %> </span>
                     <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                       <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
                     </form>
@@ -669,7 +671,11 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                       <input id="tag-col-pick" type="text" class="colorpicker-default form-control" value="#8fff00">
+                      <!-- <input id="tag-col-pick" type="text" class="colorpicker-default form-control" value="#8fff00">-->
+                      <button class="btn btn-default form-control btn-color">
+                         <img src="static/img/color_pallet.png">
+                      </button>
+
                   </div>
                   <div class="col-md-6">
                     <input type="submit" ng-hide="isLoading" ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
@@ -677,8 +683,9 @@
                   </div>
                   </div>
                 </form>
-                  <div class="form-group" ng-show="tags">
-                  <button class="btn btn-default btn-block" ng-click="manage_tags=!manage_tags;manage()"> Manage Tags</button>
+                <div class="form-group" ng-show="tags">
+                  <button class="btn btn-default btn-block" ng-click="manage_tags=!manage_tags;manage()"> Manage Tags
+                  </button>
                 </div>
                 </div>
               </div>
