--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -330,10 +330,10 @@
                                 
                                 <div class="news-block-tags">
                                   <strong>Case Origin</strong>
-                                  <span class="page-meta"><i class="icon-pencil"><a ng-click="editsource()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
+                                  <span class="page-meta"><i class="icon-pencil"><a ng-click="editcaseorigin()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
                                   
                                 </div>
-                                <p> <%=opportunity.source%></p>                        
+                                <p> <%=casee.case_origin%></p>                        
                               </div>
                               <div class="news-blocks blank-card blank-card-yellow">
                                 
@@ -512,23 +512,23 @@
             </div>
 
             <!--HKA 06.03.2014 source Modal -->
-            <div id="EditSource" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div id="EditOrigin" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
               <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("Edit Opportunity")}}</h3>
+                <h3 id="myModalLabel" class="modal-title">{{_("Edit Case")}}</h3>
               </div>
 
               <div class="modal-body">
-                 <form id="editTagline" name="editlead" ng-submit="updatsource(opportunity)" class="form-horizontal"> 
+                 <form id="editTagline" name="editlead" ng-submit="updatcaseorigin(casee)" class="form-horizontal"> 
                 
 
                   <div class="form-group">
-                        <label  class="col-md-3 control-label">{{_("Source")}} </label>
+                        <label  class="col-md-3 control-label">{{_("Case Origin")}} </label>
                        
                         <div class="col-md-9">
-                          <select ng-model="opportunity.source" class="form-control"><option value="">--None--</option><option value="Social Media">Social Media</option><option value="Web Source">Web Site</option><option value="Phone Inquiry">Phone Inquiry</option><option value="Partner Referral">Partner Referral</option><option value="Purchased List">Purchased List</option><option value="Other">Other</option></select>
+                          <select ng-model="casee.case_origin" class="form-control"><option value="">--None--</option><option value="Email">Email</option><option value="Social Media">Social Media</option><option value="Web Source">Web Site</option><option value="Phone">Phone Inquiry</option><option value="Other">Other</option></select>
                           
                          
                         </div>
