--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -302,8 +302,8 @@
                                     </div>
                                      <div class="row">
                                       <p class="col-md-11 col-md-offset-1 list-group-item-text">
-                                         <span ng-show="task.created_by">Opened by:<a href="#"> <%= task.created_by.display_name %></a></span> <span ng-show="task.about">{{ _('related to') }}<a href="#"> <%= task.about.name %></a></span>
-                                         <!--<span>Closed by:<a href="#">Transline</a></span>-->
+                                         <span ng-show="task.created_by">Opened by:<a href="#"> <%= task.created_by.display_name %></a></span> <span ng-show="task.about">{{ _('related to') }}<a href="<%= getUrl(task.about.kind,task.about.id); %>"> <%= task.about.name %></a></span>
+                                         
                                       </p>
                                       </div>
                                   </li>
