--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -202,7 +202,7 @@
         <div class="row"> 
           <div class="col-md-12">
             <h2 class="page-title">{{ _("Tasks") }} 
-                <img src="/static/img/test_loader.gif" ng-show="isLoading" style="margin-top: -5px !important;" class="pull-right" style="height: 40px;">
+                <!--img src="/static/img/test_loader.gif" ng-show="isLoading" style="margin-top: -5px !important;" class="pull-right" style="height: 40px;"-->
 
             </h2>  
             <hr/>
@@ -346,7 +346,7 @@
                                         <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
                                         <i class="fa fa-tags"></i>
                                          <span class="btn-text">
-                                            Tags iooo
+                                            Tags
                                          </span>
                                         </button>
                                         <button ng-click="assigneeModal()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
