--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -210,8 +210,8 @@
       window.is_signed_in = false;
       window.authResult = undefined;
       var apisToLoad;
-     var ROOT = '/_ah/api';
-      //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+     //var ROOT = '/_ah/api';
+      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
       var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
