--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -43,9 +43,9 @@
 
                     <div class=''>
                     <p>{{ _("Invited user:") }}</p>
-                    <div class="invitation" ng-show="slected_memeber">
-                      <img class="google-avatar" src="<%= slected_memeber.google_public_profile_photo_url%>"/>
-                        <strong> <%= slected_memeber.google_display_name %> < <%=slected_memeber.email%> ></strong>
+                    <div class="invitation" ng-repeat="invited in sharing_with">
+                      <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
+                        <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
                       <hr/>
                     </div>
                     
