adding currency helper for amount input in opportunities page

--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -78,7 +78,7 @@
                         <label  class="required col-md-3 control-label">{{_("Amount")}} </label>
                        
                         <div class="col-md-9">
-                          <input type="text" pattern="\d*"  required id="id_amount" class="form-control" ng-model="opportunity.amount">
+                          <input currency type="text" pattern="\d*"  required id="id_amount" class="form-control" ng-model="opportunity.amount">
                         </div> 
                         
                     </div>
