inline edit on account

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
    <link rel="stylesheet" href="static/css/datetimepicker.css"/>
   <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
+
   <!-- END THEME STYLES -->
 
 
@@ -211,6 +212,8 @@
   
   <script src="static/app/scripts/vendor/select2.min.js" ></script>
    <script src="static/app/scripts/vendor/angular.js" ></script>
+   <link href="static/angular-xeditable-0.1.8/css/xeditable.css" rel="stylesheet">
+  <script src="static/angular-xeditable-0.1.8/js/xeditable.js"></script>
    <script src="static/app/scripts/vendor/ui-select2.js" ></script>
   <script type="text/javascript">
     window.is_signed_in = false;
