--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -1,5 +1,5 @@
 <div  class="page-content">
-    <div class="loader-container row" ng-show="true">
+    <div class="loader-container row" ng-show="isLoading">
       <div class="loader-dialog col-md-4 col-md-offset-4 ">
         <div class="loader-content">
           Loading...
