yellow loading on all page

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -1,4 +1,12 @@
 <div  class="page-content">
+<div class="loader-container row" ng-show="isLoading">
+      <div class="loader-dialog col-md-4 col-md-offset-4 ">
+        <div class="loader-content">
+          Loading...
+        </div>
+      </div>
+      
+    </div>
 
       <div class="container" ng-show="immediateFailed">
          <div class="col-md-12">  
