--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -1,4 +1,12 @@
 <div  class="page-content">
+<div class="loader-container row" ng-show="isLoading">
+      <div class="loader-dialog col-md-4 col-md-offset-4 ">
+        <div class="loader-content">
+          Loading...
+        </div>
+      </div>
+      
+    </div>
 
    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <div id="portlet-config" class="modal hide">
@@ -83,8 +91,8 @@
                     <div class="modal-footer">
                        <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                      <input ng-hide="isLoading" ng-click="save(account)" type="submit" class="btn green" value="{{ _('Add this account') }}">
-                      <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...') }}" disabled>                      
+                      <input  ng-click="save(account)" type="submit" class="btn green" value="{{ _('Add this account') }}">
+                      <!--input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...') }}" disabled-->                      
                     
                     </div>
                     </form>
@@ -231,7 +239,7 @@
               </div><!--/inner-cards-container-->
                <div class="row">
           <div class="col-md-12">
-              <div class="pagination pull-right" ng-hide="isLoading">
+              <div class="pagination pull-right" >
                   
                  
                    <button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="pagination.prev">
@@ -244,7 +252,7 @@
                 
               
                 </div>
-                <h3 class="pagination pull-right" ng-show="isLoading">{{ _('Loading') }}...</h3>
+                <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _('Loading') }}...</h3-->
           </div>
           
           </div>
@@ -284,7 +292,7 @@
                  <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
                 <div class="row">
                   <div class="col-md-12 form-group">
-                    <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="New tag name">
+                    <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="New label">
                   </div>
                 </div>
                 <div class="row">
@@ -297,8 +305,8 @@
 
                   </div>
                   <div class="col-md-6">
-                    <input type="submit" ng-hide="isLoading" ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
-                    <input type="submit" ng-show="isLoading" class="btn green pull-right" value="{{ _('Loading...') }}">
+                    <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                    <!--input type="submit" ng-show="isLoading" class="btn green pull-right" value="{{ _('Loading...') }}"-->
                   </div>
                   </div>
                 </form>
