working on fluid inserting opportunities,leads and cases

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -97,8 +97,7 @@
                        
                         <div class="col-md-9">
                            <select class="form-control" ng-model="status_selected" ng-options="stat.status for stat in casesatuses" >
-                            <option value=""><%=casee.status%> </option>
-                            <!--option value=""><%=status_selected.status%></option-->
+                            <option value="">-- choose a status --</option>
                           </select>
                           
                         </div>
