--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -31,8 +31,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input type="submit" class="btn green" value="Create this document">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                         
             </form>
             </div>
@@ -40,6 +40,14 @@
           </div>
 </div>
 <div  class="page-content">
+   <div class="loader-container row" ng-show="isLoading">
+      <div class="loader-dialog col-md-4 col-md-offset-4 ">
+        <div class="loader-content">
+          Loading...
+        </div>
+      </div>
+      
+    </div>
 
       <div class="" ng-show="immediateFailed">
          <div class="col-md-12">  
@@ -128,8 +136,8 @@
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                <input ng-hide="isLoading" ng-click="deletecontact(contact)" type="submit" class="btn red" value="Delete this Contact">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                <input  ng-click="deletecontact(contact)" type="submit" class="btn red" value="Delete this Contact">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
                </div>
@@ -204,8 +212,8 @@
                                    </div>      
                                          <div class="pull-right">
                                        
-                                          <input ng-hide="isLoading" type="submit" class="btn green" value="Add this note">
-                                          <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                                          <input  type="submit" class="btn green" value="Add this note">
+                                          <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                           </div>
                                         </form>
                                        </div>
@@ -239,7 +247,7 @@
                                         {{_("Next")}} 
                                         </button>
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
                               </div>
                               </div>
                            
@@ -1019,8 +1027,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this phone">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                  <input  type="submit" class="btn green" value="Add this phone">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                 </form>
                 </div>
@@ -1049,8 +1057,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this email">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                  <input  type="submit" class="btn green" value="Add this email">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                 </form>
                 </div>
@@ -1103,8 +1111,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this address">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                  <input type="submit" class="btn green" value="Add this address">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                 </form>
                 </div>
@@ -1134,8 +1142,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="{{_('Add this Custom Field')}}">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
+                  <input type="submit" class="btn green" value="{{_('Add this Custom Field')}}">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled-->
               </div>
                 </form>
                 </div>
@@ -1165,8 +1173,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this Website">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                  <input  type="submit" class="btn green" value="Add this Website">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                 </form>
                 </div>
@@ -1196,8 +1204,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this Social link">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                  <input  type="submit" class="btn green" value="Add this Social link">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                 </form>
                 </div>
