--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -1,4 +1,12 @@
 <div  class="page-content">
+<div class="loader-container row" ng-show="isLoading">
+      <div class="loader-dialog col-md-4 col-md-offset-4 ">
+        <div class="loader-content">
+          Loading...
+        </div>
+      </div>
+      
+    </div>
     
 
    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
@@ -138,7 +146,7 @@
                     </button></li>
                   </ul>
                 </div>
-                <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
+                <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
           </div>
             
           
